--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,9 +13,16 @@ import { SITE_TITLE, SITE_DESCRIPTION, BRIEF_INTRO } from '../consts'
   <body>
     <Header />
     <main>
-      <h1>{BRIEF_INTRO.hello}</h1>
-      <p>{BRIEF_INTRO.overview.content}</p>
-      <p>{BRIEF_INTRO.overview.bonus}</p>
+      <h2>{BRIEF_INTRO.hello}</h2>
+      <div class="container">
+        <div class="container-left">
+          <img alt="profile image" src="/profile.jpeg" />
+        </div>
+        <div class="container-right">
+          <p>{BRIEF_INTRO.overview.content}</p>
+          <p>{BRIEF_INTRO.overview.bonus}</p>
+        </div>
+      </div>
       <h2>{BRIEF_INTRO.moneytree.title}</h2>
       <p>{BRIEF_INTRO.moneytree.content}</p>
       <h2>{BRIEF_INTRO.automotive.title}</h2>
