--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,22 +1,16 @@
 ---
 import HeaderLink from './HeaderLink.astro'
 import { SITE_TITLE } from '../consts'
+import SocialLinkTexts from './SocialLinkTexts.astro'
 ---
 
 <header>
   <h2>{SITE_TITLE}</h2>
   <nav>
-    <HeaderLink href="https://www.linkedin.com/in/caiolins" target="_blank">LinkedIn</HeaderLink>
-    <HeaderLink href="https://github.com/clins777" target="_blank">GitHub</HeaderLink>
-    <HeaderLink href="mailto:clins7777777@gmail.com" target="_blank">Email</HeaderLink>
-    <HeaderLink
-      href="https://drive.google.com/file/d/1F6NKUhDfrfMXeknScqi5N2oHCYP8Rb5P"
-      target="_blank"
-    >
-      Resume
-    </HeaderLink>
+    <SocialLinkTexts />
   </nav>
 </header>
+
 <style>
   header {
     margin: 0em 0 2em;
