chore: add consulting and webdev experiences

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,8 @@ import { SITE_TITLE, SITE_DESCRIPTION, BRIEF_INTRO } from '../consts'
           <p>{BRIEF_INTRO.overview.bonus}</p>
         </div>
       </div>
+      <h2>{BRIEF_INTRO.kss.title}</h2>
+      <p>{BRIEF_INTRO.kss.content}</p>
       <h2>{BRIEF_INTRO.moneytree.title}</h2>
       <p>{BRIEF_INTRO.moneytree.content}</p>
       <h2>{BRIEF_INTRO.automotive.title}</h2>
@@ -32,6 +34,8 @@ import { SITE_TITLE, SITE_DESCRIPTION, BRIEF_INTRO } from '../consts'
       <p>{BRIEF_INTRO.verball.content}</p>
       <h3>{BRIEF_INTRO.voxar.title}</h3>
       <p>{BRIEF_INTRO.voxar.content}</p>
+      <h3>{BRIEF_INTRO.rv.title}</h3>
+      <p>{BRIEF_INTRO.rv.content}</p>
     </main>
     <Footer />
   </body>
