--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { MY_NAME } from '../consts'
+import { FULL_NAME } from '../consts'
 import SocialLinkIcons from './SocialLinkIcons.astro'
 const today = new Date()
 ---
@@ -10,7 +10,7 @@ const today = new Date()
   </div>
   <div>
     &copy; {today.getFullYear()}
-    {MY_NAME}. All rights reserved.
+    {FULL_NAME}. All rights reserved.
   </div>
 </footer>
 <style>
