--- a/src/components/SocialLinkIcons.astro
+++ b/src/components/SocialLinkIcons.astro
@@ -1,25 +1,29 @@
 ---
-import Linktree from './IconLinktree.astro'
-import LinkedIn from './IconLinkedIn.astro'
+import { EMAIL, HANDLE, RESUME_URL } from '../consts'
+import HeaderLink from './HeaderLink.astro'
 import GitHub from './IconGitHub.astro'
 import Gmail from './IconGmail.astro'
+import LinkedIn from './IconLinkedIn.astro'
+import Linktree from './IconLinktree.astro'
 import IconResume from './IconResume.astro'
-import HeaderLink from './HeaderLink.astro'
 ---
 
-<HeaderLink href="https://linktr.ee/clins777" target="_blank"><Linktree /></HeaderLink>
+<HeaderLink href={`https://linktr.ee/${HANDLE}`} target="_blank">
+  <Linktree />
+</HeaderLink>
 •
-<HeaderLink href="https://www.linkedin.com/in/caiolins" target="_blank">
+<HeaderLink href={`https://www.linkedin.com/in/${HANDLE}`} target="_blank">
   <LinkedIn />
 </HeaderLink>
 •
-<HeaderLink href="https://github.com/clins777" target="_blank"><GitHub /></HeaderLink>
+<HeaderLink href={`https://github.com/${HANDLE}`} target="_blank">
+  <GitHub />
+</HeaderLink>
 •
-<HeaderLink href="mailto:clins7777777@gmail.com" target="_blank"><Gmail /></HeaderLink>
+<HeaderLink href={`mailto:${EMAIL}`} target="_blank">
+  <Gmail />
+</HeaderLink>
 •
-<HeaderLink
-  href="https://drive.google.com/file/d/1F6NKUhDfrfMXeknScqi5N2oHCYP8Rb5P"
-  target="_blank"
->
+<HeaderLink href={RESUME_URL} target="_blank">
   <IconResume />
 </HeaderLink>
