--- a/src/components/SocialLinkTexts.astro
+++ b/src/components/SocialLinkTexts.astro
@@ -1,5 +1,5 @@
 ---
-import { EMAIL, HANDLE, RESUME_URL } from '../consts'
+import { EMAIL, HANDLE, RESUME_URL } from '../../astro.config.mjs'
 import HeaderLink from './HeaderLink.astro'
 ---
 
