--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,10 @@
 ---
-import HeaderLink from './HeaderLink.astro'
-import { SITE_TITLE } from '../consts'
+import { FULL_NAME } from '../consts'
 import SocialLinkTexts from './SocialLinkTexts.astro'
 ---
 
 <header>
-  <h2>{SITE_TITLE}</h2>
+  <h2>{FULL_NAME}</h2>
   <nav>
     <SocialLinkTexts />
   </nav>
